# paltech-ros2-ai-test

./: .gitignore  README.md  pyproject.toml
paltech_rumex/: __init__.py  clustering.py  detector.py  visualization.py
ros2_ws/src/paltech_rumex_ros/: package.xml  setup.cfg  setup.py
ros2_ws/src/paltech_rumex_ros/paltech_rumex_ros/: __init__.py  detection_node.py  image_publisher.py
ros2_ws/src/paltech_rumex_ros/resource/: paltech_rumex_ros
scripts/: run_pipeline.py
