<?xml version="1.0"?>
<package format="3">
  <name>paltech_rumex_ros</name>
  <version>0.1.0</version>
  <description>ROS2 nodes for publishing images and running Rumex detections.</description>
  <maintainer email="devnull@example.com">Paltech Candidate</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
